upd methods with possible null